--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "socket.io": "^4.5.1",
-    "nodemon": "^2.0.19"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "socket.io": "^4.5.1"
   }
 }
